tests/ui/splat/splat-cannot-resolve.stderr
error[E0223]: ambiguous associated type
  --> $DIR/splat-cannot-resolve.rs:23:26
   |
LL | fn ambig(#[arg_splat] t: Trait::MaybeTup) {}
   |                          ^^^^^^^^^^^^^^^
   |
help: if there were a type named `Example` that implemented `Trait`, you could use the fully-qualified path
   |
LL - fn ambig(#[arg_splat] t: Trait::MaybeTup) {}
LL + fn ambig(#[arg_splat] t: <Example as Trait>::MaybeTup) {}
   |

error[E0223]: ambiguous associated type
  --> $DIR/splat-cannot-resolve.rs:28:30
   |
LL | fn ambig_tup(#[arg_splat] t: Trait::Tup) {}
   |                              ^^^^^^^^^^
   |
help: if there were a type named `Example` that implemented `Trait`, you could use the fully-qualified path
   |
LL - fn ambig_tup(#[arg_splat] t: Trait::Tup) {}
LL + fn ambig_tup(#[arg_splat] t: <Example as Trait>::Tup) {}
   |

error[E0720]: cannot resolve opaque type
  --> $DIR/splat-cannot-resolve.rs:8:41
   |
LL | fn tuple(#[arg_splat] t: impl Sized) -> impl Sized {
   |                                         ^^^^^^^^^^

error[E0720]: cannot resolve opaque type
  --> $DIR/splat-cannot-resolve.rs:13:60
   |
LL | fn tuple_trait(#[arg_splat] t: impl std::marker::Tuple) -> impl std::marker::Tuple {
   |                                                            ^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: cannot use splat attribute; the splatted argument type must be a tuple or unit, not a {type error} ({type error})
  --> $DIR/splat-cannot-resolve.rs:23:26
   |
LL | fn ambig(#[arg_splat] t: Trait::MaybeTup) {}
   |                          ^^^^^^^^^^^^^^^
...
LL |     ambig();
   |     ^^^^^^^

error[E0277]: cannot use splat attribute; the splatted argument type must be a tuple or unit, not a {type error} ({type error})
  --> $DIR/splat-cannot-resolve.rs:28:30
   |
LL | fn ambig_tup(#[arg_splat] t: Trait::Tup) {}
   |                              ^^^^^^^^^^
...
LL |     ambig_tup();
   |     ^^^^^^^^^^^

error[E0277]: cannot use splat attribute; the splatted argument type must be a tuple or unit, not a {type error} ({type error})
  --> $DIR/splat-cannot-resolve.rs:23:26
   |
LL | fn ambig(#[arg_splat] t: Trait::MaybeTup) {}
   |                          ^^^^^^^^^^^^^^^
...
LL |     ambig(1);
   |     ^^^^^^^^

error[E0277]: cannot use splat attribute; the splatted argument type must be a tuple or unit, not a {type error} ({type error})
  --> $DIR/splat-cannot-resolve.rs:28:30
   |
LL | fn ambig_tup(#[arg_splat] t: Trait::Tup) {}
   |                              ^^^^^^^^^^
...
LL |     ambig_tup(1);
   |     ^^^^^^^^^^^^

error[E0277]: cannot use splat attribute; the splatted argument type must be a tuple or unit, not a {type error} ({type error})
  --> $DIR/splat-cannot-resolve.rs:23:26
   |
LL | fn ambig(#[arg_splat] t: Trait::MaybeTup) {}
   |                          ^^^^^^^^^^^^^^^
...
LL |     ambig(1, 2.0);
   |     ^^^^^^^^^^^^^

error[E0277]: cannot use splat attribute; the splatted argument type must be a tuple or unit, not a {type error} ({type error})
  --> $DIR/splat-cannot-resolve.rs:28:30
   |
LL | fn ambig_tup(#[arg_splat] t: Trait::Tup) {}
   |                              ^^^^^^^^^^
...
LL |     ambig_tup(1, 2.0);
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0223, E0277, E0720.
For more information about an error, try `rustc --explain E0223`.
